<resources>
    <string name="app_name">ETS</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="login_search_code">กรุณากรอก Code</string>
    <string name="login_search">ค้นหา</string>
    <string name="birthday_press_birthday">กรุณากรอกวันเดือนปีเกิด</string>
    <string name="birthday_cal_birthday">อายุของคุณ</string>
    <string name="birthday_next">ถัดไป</string>
    <string name="birthday_previous">ก่อนหน้า</string>
    <string name="blood_press_pressure">ความดันโลหิต</string>
    <string name="blood_press_bloodsugar">ระดับน้ำตาลในเลือด</string>
    <string name="blood_press_cholesterol">ระดับคอลเลสเเตอรอลในเลือด</string>
    <string name="blood_next">ถัดไป</string>
    <string name="blood_previous">ก่อนหน้า</string>
    <string name="blood_text_head">กรุณากรอกเป็นทศนิยม 2 ตำแหน่ง</string>
    <string name="height_press_height">ส่วนสูง ( เซ็นติเมตร )</string>
    <string name="height_press_weight">น้ำหนัก ( กิโลกรัม )</string>
    <string name="height_press_waistline">รอบเอว ( เซ็นติเมตร )</string>
    <string name="height_next">ถัดไป</string>
    <string name="height_previous">ก่อนหน้า</string>
    <string name="height_text_head">กรุณากรอกค่าล่าสุุด</string>
    <string name="height_text_unitheight">เซ็นติเมตร</string>
    <string name="height_text_unitweight">กิโลกรัม</string>
    <string name="height_text_unitwaistline">เซ็นติเมตร</string>
    <string name="name_press_name">ชื่อ</string>
    <string name="name_press_surname">นามสกุล</string>
    <string name="name_press_male">เพศ ชาย</string>
    <string name="name_press_female">เพศ หญิง</string>
    <string name="name_next">ถัดไป</string>
    <string name="name_previous">ก่อนหน้า</string>
    <string name="planex_gender">เพศ</string>
    <string name="planex_age">อายุ</string>
    <string name="planex_timeused">เวลาที่ใช้</string>
    <string name="planex_heartrateav">อัตราการเต้นหัวใจ</string>
    <string name="planex_distanceused">ระยะทาง</string>
    <string name="planex_vo2max">VO2 MAX</string>
    <string name="planex_next">ถัดไป</string>
    <string name="planex_previous">ก่อนหน้า</string>
    <string name="showuser_fullname">ชื่อ นามสกุล</string>
    <string name="showuser_gender">เพศ</string>
    <string name="showuser_age">อายุ</string>
    <string name="showuser_height">ส่วนสูง</string>
    <string name="showuser_weight">น้ำหนัก</string>
    <string name="showuser_waistline">รอบเอว</string>
    <string name="showuser_pressure">ความดันโลหิต</string>
    <string name="showuser_bloodsugar">ระดับน้ำตาลในเลือด</string>
    <string name="showuser_cholesterol">ระดับคอลเลสเเตอรอลในเลือด</string>
    <string name="showuser_edit">แก้ไขข้อมูล</string>
    <string name="showuser_submit">ยืนยัน</string>
    <string name="showuser_text_head">กรุณาตรวจสอบความถูกต้อง</string>
    <string name="showuser_risk">ความเสี่ยง</string>
    <string name="smoking_smoking">คุณสูบบุหรี่ไหม</string>
    <string name="smoking_diabetes">คุณเป็นเบาหวานไหม</string>
    <string name="smoking_switch_smoking">สูบบุหรี่</string>
    <string name="smoking_switch_diabetes">เป็นเบาหวาน</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="code_press_code">เลขที่ผู้ใช้งาน</string>
    <string name="code_text_head">กรุณากรอกเลขที่ผู้ใช้งานที่ต้อวการค้นหา</string>
    <string name="code_search">ค้นหา</string>
    <string name="code_result">ผลการค้นหา</string>
    <string name="code_searched_code">เลขที่ผู้ใช้งาน</string>
    <string name="code_check">ตรวจสอบ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="assessment_press_height">ส่วนสูง</string>
    <string name="assessment_press_weight">น้ำหนัก</string>
    <string name="assessment_press_waistline">รอบเอว</string>
    <string name="assessment_press_pressure">ความดันโลหิต</string>
    <string name="assessment_press_bloodsugar">ระดับน้ำตาลในเลือด</string>
    <string name="assessment_press_cholesterol">ระดับคอลเลสเเตอรอลในเลือด</string>
    <string name="assessment_text_head">กรุณากรอกค่าล่าสุด</string>
    <string name="assessment_text_mid">กรุณากรอกเป็นทศนิยม 2 ตำแหน่ง</string>
    <string name="assessment_next">ถัดไป</string>
    <string name="menu_design">ออกแบบโปรแกรมการออกกำลังกาย</string>
    <string name="menu_history">ประวัติการออกกำลังกาย</string>
    <string name="menu_histvo2">ประวัติการออกกำลังกายVO2</string>
    <string name="menu_following">กำลังติดตาม</string>
    <string name="menu_follower">ผู้ติดตาม</string>
    <string name="menu_assessment">ประเมินความเสี่ยง</string>
    <string name="menu_exercise">ออกกำลังกาย</string>
    <string name="menu_test">ทดสอบการออกกำลังกาย</string>
    <string name="menu_profile">ประวัติส่วนตัว</string>
    <string name="menu_program">โปรแกรมการออกกำลังกาย</string>
    <string name="menu_device">อุปกรณ์</string>
    <string name="menu_logout">ออกจากระบบ</string>
    <string name="menu_quit">ปิดโปรแกรม</string>
    <string name="plan_row_item_yourplan">โปรแกรมการออกกำลังกายของคุณ</string>
    <string name="plan_row_item_textdate">วันที่</string>
    <string name="histex_row_item_yourplanex">ประวัติการออกกำลังกายของคุณ</string>
    <string name="histex_row_item_textdate">วันที่</string>
    <string name="plan_detail_yourrisk">ความเสี่ยงของคุณ คือ ระดับ</string>
    <string name="plan_detail_yourex">คุณออกกำลังกาย ระดับ</string>
    <string name="histex_detail_distance">ก้าว/ระยะทาง</string>
    <string name="histex_detail_time">ระยะเวลา</string>
    <string name="testex_headtext">One-mile walk test</string>
    <string name="testex_explain">การทดสอบนี้เป็นการทดสอบโดยการเดินในระยะทาง 1 ไมล์ ( 1.6 กิโลเมตร )โดยเดินให้เร็ว
    ที่สุดเท่าที่จะทำได้ห้ามวิ่ง บันทึก HR ใน 2 นาทีสุดท้ายของการเดิน และหาค่าเฉลี่ย</string>
    <string name="testex_gototest">เริ่มทดสอบ</string>
    <string name="testvo2max_name">คุณ : </string>
    <string name="testvo2max_gender">เพศ : </string>
    <string name="testvo2max_weight">น้ำหนัก (ปอนด์) : </string>
    <string name="testvo2max_vo2max">ค่า VO2 MAX : </string>
    <string name="follow_row_item_mail">เมลล์ : </string>
    <string name="follow_row_item_name">ชื่อ : </string>
    <string name="search_text">กรุณากรอก G-mail ที่ต้องการค้นหา</string>
    <string name="search_mail">G-mail</string>
    <string name="ex_levelex">ระดับการออกกำลังกายของคุณ คือ : </string>
    <string name="ex_step">ก้าว : </string>
    <string name="ex_distance">ระยะทาง : </string>
    <string name="ex_hrlimit">อัตราการเต้นของหัวใจที่กำหนด : </string>
    <string name="ex_yourhr">อัตราการเต้นของหัวใจของคุณ ขณะนี้ : </string>
    <string name="ex_timelimit">ระยะเวลาที่กำหนด : </string>
    <string name="ex_yourtime">ระยะเวลาที่ผ่านมา : </string>
    <string name="ex_ps">เวลาจะเริ่มนับก็ต่อเมื่ออัตราการเต้นของหัวใจถึงกำหนด : </string>
    <string name="start_ex_button">เริ่มออกกำลังกาย</string>
    <string name="heading_title_profile">ประวัติส่วนตัว</string>
    <string name="heading_title_check">ตรวจสอบข้อมูล</string>
    <string name="heading_title_ex">ออกกำลังกาย</string>
    <string name="heading_title_histex">ประวัติออกกำลังกาย</string>
    <string name="heading_title_testex">ทดสอบการออกกำลังกาย</string>
    <string name="heading_title_follower">ผู้ติดตาม</string>
    <string name="heading_title_plan">โปรแกรมการออกกำลังกาย</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="StringUtils_sender"> (%1$s)</string>
    <string name="pref_theme_light">Light</string>
    <string name="pref_theme_dark">Dark</string>
    <string name="device_with_rssi">%1$s (%2$s)</string>
    <string name="title_activity_debug">Debug</string>
    <string name="title_activity_appmanager">App Manager</string>
    <string name="appmanager_cached_watchapps_watchfaces">Apps in cache</string>
    <string name="appmanager_installed_watchapps">Installed apps</string>
    <string name="appmanager_installed_watchfaces">Installed watchfaces</string>
    <string name="appmananger_app_delete">Delete</string>
    <string name="appmananger_app_delete_cache">Delete and remove from cache</string>
    <string name="appmananger_app_reinstall">Reinstall</string>
    <string name="appmanager_app_openinstore">Search in Pebble Appstore</string>
    <string name="appmanager_health_activate">Activate</string>
    <string name="appmanager_health_deactivate">Deactivate</string>
    <string name="appmanager_hrm_activate">Activate HRM</string>
    <string name="appmanager_hrm_deactivate">Deactivate HRM</string>
    <string name="appmanager_weather_activate">Activate system weather app</string>
    <string name="appmanager_weather_deactivate">Deactivate system weather app</string>
    <string name="appmanager_weather_install_provider">Install the weather notification app</string>
    <string name="app_configure">Configure</string>
    <string name="app_move_to_top">Move to top</string>
    <string name="title_activity_appblacklist">Notification Blacklist</string>
    <string name="title_activity_fw_app_insaller">FW/App installer</string>
    <string name="fw_upgrade_notice">You are about to install firmware %s instead of the one currently on your Mi Band.</string>
    <string name="fw_multi_upgrade_notice">You are about to install firmwares %1$s and %2$s instead of the ones currently on your Mi Band.</string>
    <string name="miband_firmware_known">This firmware has been tested and is known to be compatible with Gadgetbridge.</string>
    <string name="miband_firmware_unknown_warning">"This firmware is untested and may not be compatible with Gadgetbridge.\n\nYou are NOT encouraged to flash it to your Mi Band!"</string>
    <string name="miband_firmware_suggest_whitelist">If you still want to proceed and things continue to work properly afterwards, please tell the Gadgetbridge developers to whitelist firmware version: %s</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General Settings</string>
    <string name="pref_title_general_autoconnectonbluetooth">Connect to device when Bluetooth turned on</string>
    <string name="pref_title_general_autostartonboot">Start automatically</string>
    <string name="pref_title_general_autocreonnect">Reconnect automatically</string>
    <string name="pref_title_audo_player">Preferred Audioplayer</string>
    <string name="pref_default">Default</string>
    <string name="pref_header_datetime">Date and Time</string>
    <string name="pref_title_datetime_syctimeonconnect">Sync time</string>
    <string name="pref_summary_datetime_syctimeonconnect">Sync time to device when connecting and when time or timezone changes on Android</string>
    <string name="pref_title_theme">Theme</string>
    <string name="pref_title_language">Language</string>
    <string name="pref_title_minimize_priority">Hide the Gadgetbridge notification</string>
    <string name="pref_summary_minimize_priority_off">The icon in the status bar and the notification in the lockscreen are shown</string>
    <string name="pref_summary_minimize_priority_on">The icon in the status bar and the notification in the lockscreen are hidden</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_notifications_repetitions">Repetitions</string>
    <string name="pref_title_notifications_call">Phone Calls</string>
    <string name="pref_title_notifications_sms">SMS</string>
    <string name="pref_title_notifications_pebblemsg">Pebble Messages</string>
    <string name="pref_summary_notifications_pebblemsg">Support for applications which send Notifications to the Pebble via PebbleKit.</string>
    <string name="pref_title_notifications_generic">Generic notification support</string>
    <string name="pref_title_whenscreenon">… also when screen is on</string>
</resources>