<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.AssessmentFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/assessment_text_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assessment_text_head"
            tools:layout_editor_absoluteX="147dp"
            tools:layout_editor_absoluteY="16dp" />

        <EditText
            android:id="@+id/assessment_press_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/assessment_press_height"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteY="48dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:id="@+id/assessment_press_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/assessment_press_weight"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteY="111dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:id="@+id/assessment_press_waistline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/assessment_press_waistline"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteY="176dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/assessment_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assessment_next"
            tools:layout_editor_absoluteY="468dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.498" />

        <EditText
            android:id="@+id/assessment_press_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:hint="@string/assessment_press_pressure"
            android:inputType="textPersonName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="267dp" />

        <EditText
            android:id="@+id/assessment_press_bloodsugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:hint="@string/assessment_press_bloodsugar"
            android:inputType="textPersonName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="326dp" />

        <EditText
            android:id="@+id/assessment_press_cholesterol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:hint="@string/assessment_press_cholesterol"
            android:inputType="textPersonName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="397dp" />

        <TextView
            android:id="@+id/assessment_text_mid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assessment_text_mid"
            tools:layout_editor_absoluteX="178dp"
            tools:layout_editor_absoluteY="233dp" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>
