<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.myapplication.HeightActivity">

    <TextView
        android:id="@+id/height_text_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height_text_head"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="22dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/height_press_waistline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/height_press_waistline"
        android:inputType="numberDecimal"
        app:layout_constraintLeft_toLeftOf="@+id/height_press_weight"
        app:layout_constraintRight_toRightOf="@+id/height_press_weight"
        app:layout_constraintTop_toBottomOf="@+id/height_press_weight"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/height_press_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/height_press_weight"
        android:inputType="numberDecimal"
        app:layout_constraintLeft_toLeftOf="@+id/height_press_height"
        app:layout_constraintRight_toRightOf="@+id/height_press_height"
        app:layout_constraintTop_toBottomOf="@+id/height_press_height"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/height_press_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:ems="10"
        android:hint="@string/height_press_height"
        android:inputType="numberDecimal"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/height_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height_previous"
        android:layout_marginStart="84dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/height_next"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="84dp" />

    <Button
        android:id="@+id/height_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height_next"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="39dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="100dp"
        app:layout_constraintLeft_toRightOf="@+id/height_previous"
        android:layout_marginLeft="39dp" />

    <TextView
        android:id="@+id/height_text_unitheight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height_text_unitheight"
        app:layout_constraintLeft_toRightOf="@+id/height_press_height"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="58dp"
        app:layout_constraintBottom_toTopOf="@+id/height_text_unitweight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.989" />

    <TextView
        android:id="@+id/height_text_unitweight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height_text_unitweight"
        app:layout_constraintLeft_toRightOf="@+id/height_press_weight"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="69dp"
        app:layout_constraintBottom_toTopOf="@+id/height_text_unitwaistline"
        app:layout_constraintHorizontal_bias="0.2" />

    <TextView
        android:id="@+id/height_text_unitwaistline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height_text_unitwaistline"
        app:layout_constraintLeft_toRightOf="@+id/height_press_waistline"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="235dp"
        app:layout_constraintHorizontal_bias="0.2" />
</android.support.constraint.ConstraintLayout>
