<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.myapplication.BloodActivity">

    <EditText
        android:id="@+id/blood_press_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="98dp"
        android:ems="10"
        android:hint="@string/blood_press_pressure"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/blood_press_bloodsugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="37dp"
        android:ems="10"
        android:hint="@string/blood_press_bloodsugar"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="@+id/blood_press_pressure"
        app:layout_constraintRight_toRightOf="@+id/blood_press_pressure"
        app:layout_constraintTop_toBottomOf="@+id/blood_press_pressure"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/blood_press_cholesterol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/blood_press_cholesterol"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="@+id/blood_press_bloodsugar"
        app:layout_constraintRight_toRightOf="@+id/blood_press_bloodsugar"
        app:layout_constraintTop_toBottomOf="@+id/blood_press_bloodsugar"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/blood_text_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blood_text_head"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/blood_press_pressure"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="43dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="43dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/blood_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blood_previous"
        android:layout_marginStart="84dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/blood_next"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="84dp" />

    <Button
        android:id="@+id/blood_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blood_next"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="39dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="76dp"
        app:layout_constraintLeft_toRightOf="@+id/blood_previous"
        android:layout_marginLeft="39dp" />
</android.support.constraint.ConstraintLayout>
