<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.CodeFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/code_text_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code_text_head"
            tools:layout_editor_absoluteY="52dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/code_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code_search"
            tools:layout_editor_absoluteX="148dp"
            android:layout_marginTop="41dp"
            app:layout_constraintTop_toBottomOf="@+id/code_press_code" />

        <EditText
            android:id="@+id/code_press_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/code_press_code"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteY="101dp"
            android:layout_marginLeft="64dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.216" />

        <TextView
            android:id="@+id/code_searched_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code_searched_code"
            tools:layout_editor_absoluteY="350dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.779"
            app:layout_constraintRight_toLeftOf="@+id/code_searched_value" />

        <TextView
            android:id="@+id/code_searched_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            tools:layout_editor_absoluteY="350dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toLeftOf="@+id/button2"
            app:layout_constraintHorizontal_bias="0.82" />

        <TextView
            android:id="@+id/code_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code_result"
            tools:layout_editor_absoluteY="266dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.18" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Button"
            tools:layout_editor_absoluteY="332dp"
            android:layout_marginRight="33dp"
            app:layout_constraintRight_toRightOf="parent" />
    </android.support.constraint.ConstraintLayout>

</FrameLayout>
